--- a/plugins/akmal/advantages/updates/version.yaml
+++ b/plugins/akmal/advantages/updates/version.yaml
@@ -6,3 +6,6 @@
 1.0.3:
     - 'Updated table akmal_advantages_'
     - builder_table_update_akmal_advantages_.php
+1.0.4:
+    - 'Updated table akmal_advantages_'
+    - builder_table_update_akmal_advantages__2.php
