--- a/plugins/akmal/alltarifs/models/alltarifs/columns.yaml
+++ b/plugins/akmal/alltarifs/models/alltarifs/columns.yaml
@@ -1,7 +1,4 @@
 columns:
-    description:
-        label: 'tarif description'
-        type: text
-    bonus:
-        label: 'tarif bonus'
+    title:
+        label: Заголовок
         type: text
