--- a/plugins/akmal/alltarifs/controllers/alltarifs/config_form.yaml
+++ b/plugins/akmal/alltarifs/controllers/alltarifs/config_form.yaml
@@ -1,6 +1,6 @@
 name: AllTarifs
-form: $/akmal/alltarifs/models/alltarifs/fields.yaml
 modelClass: Akmal\Alltarifs\Models\AllTarifs
+form: $/akmal/alltarifs/models/alltarifs/fields.yaml
 defaultRedirect: akmal/alltarifs/alltarifs
 create:
     redirect: 'akmal/alltarifs/alltarifs/update/:id'
@@ -8,3 +8,4 @@ create:
 update:
     redirect: akmal/alltarifs/alltarifs
     redirectClose: akmal/alltarifs/alltarifs
+preview: {  }
